# lease_generation

./: LICENSE  MODEL_SPEC.md  README.md  example_template.json  main.py  pyproject.toml
src/lease_generator/: __init__.py  config_manager.py  main.py  models.py  template_manager.py  templates.py
src/lease_generator/templates/: edit_form.html  form.html  lease_template.html  template_editor.html  template_file_manager.html  template_manager.html  template_saved.html
