[project]
name = "lease-generator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "fastapi>=0.116.1",
    "jinja2>=3.1.6",
    "pydantic>=2.10.6",
    "python-multipart>=0.0.20",
    "uvicorn>=0.33.0",
    "weasyprint>=61.2",
]
